--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +232,8 @@
      "text": [
       "\n",
       "Examples: \n",
-      "Input: Events Europe July 29 — Battle of Stiklestad (Norway): Olav Haraldsson loses to his pagan vassals and is killed in the battle.\n",
-      "Output: Olav Haraldsson lost the Battle of Stiklestad in Europe and was killed in the fight.\n",
+      "Input: As of 2000, the population was 89,148.\n",
+      "Output: As of 2000, the number of people was 89,148.\n",
       "\n",
       "\n"
      ]
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -255,26 +255,26 @@
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Examples: \n",
-      "Input: Protests across the nation were suppressed.\n",
-      "Output: Protests across the nation were stopped.\n",
+      "Input: Gable also earned an Academy Award nomination when he portrayed Fletcher Christian in 1935's Mutiny on the Bounty.\n",
+      "Output: Gable earned an Academy Award nomination for portraying Fletcher Christian in Mutiny on the Bounty.\n",
       "\n",
-      "Input: His next work, Saturday, follows an especially eventful day in the life of a successful neurosurgeon.\n",
-      "Output: His next work, Saturday, follows a very eventful day in the life of a successful neurosurgeon.\n",
+      "Input: Pauline returned in the Game Boy remake of Donkey Kong in 1994, and later Mario vs. Donkey Kong 2: March of the Minis in 2006, although the character is now described as \"Mario's friend\".\n",
+      "Output: Pauline appeared again in the Game Boy remake of Donkey Kong in 1994, and later Mario vs. Donkey Kong 2: March of the Minis in 2006, although the character is now known as \"Mario's friend\".\n",
       "\n",
-      "Input: Since 2000, the recipient of the Kate Greenaway Medal has also been presented with the Colin Mears Award to the value of £5000.\n",
-      "Output: Whoever wins the Kate Greenway Medal also gets The Colin Mears award which is L5000.\n",
+      "Input: Most of the songs were written by Richard M. Sherman and Robert B. Sherman.\n",
+      "Output: Richard M. Sherman and Robert B. Sherman had written most of the songs.\n",
       "\n",
-      "Input: Mariel of Redwall is a fantasy novel by Brian Jacques, published in 1991.\n",
-      "Output: Mariel Redwall is a pretend book by Brian Jacques, made in 1991.\n",
+      "Input: Disney received a full-size Oscar statuette and seven miniature ones, presented to him by 10-year-old child actress Shirley Temple.\n",
+      "Output: 10 year old shirley temple presented disney a full-size oscar statue and seven small ones.\n",
       "\n",
-      "Input: This was absorbed into battalions being formed for XI International Brigade.\n",
-      "Output: This merged into battalions for the XI International Brigade.\n",
+      "Input: By early on September 30, wind shear began to dramatically increase and a weakening trend began.\n",
+      "Output: Early September 30, wind shear began to dramatically increase and a weakening trend began.\n",
       "\n",
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
-      "Input: The club said on social media that customers subdued the gunman, that it was \"devastated by the senseless attack on our community\", and that it offered condolences to the victims and their families.\n",
+      "Input: The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
       "Output:\n",
-      " The club wrote on social media that customers tackled the gunman and they felt \"devastated by the horrible attack on our community\". They offered sympathy to the people affected and their families.\n"
+      " Winchester College has a variety of architectural styles from different periods of its construction, starting from its founding in 1382. Additions were made in the medieval and Early Modern times, followed by a large expansion during the Victorian era and other extensions at the turn of the 20th century and recently.\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
