add rachel's data and save graphs as svg

--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,15 +11,15 @@
      "text": [
       "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json']\n",
       "\n",
-      "Found users: {'vinayak', 'anton', 'kelly', 'ayush', 'vishnesh'}\n",
-      "\n",
-      "Couldn't process positive rating for substitution: ['positive', '', '', '']. Assuming 'somewhat'...\n"
+      "Found users: {'kelly', 'ayush', 'anton', 'vinayak', 'vishnesh'}\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from scoring import *\n",
     "from dataloader import *\n",
+    "from scipy.stats import kendalltau\n",
     "from evaluate import load\n",
     "\n",
     "sari = load(\"sari\")\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "        params_consider = [\n",
     "            'good_syntax'\n",
     "        ]\n",
-    "    elif (op == 'syntax'):\n",
+    "    elif (op == 'lexical'):\n",
     "        # Lexical edits\n",
     "        params_consider = [\n",
     "            'good_paraphrase',\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        " 11.258852050879053]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,19 +157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sari' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-9f0d6d0c7bfc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;31m# Then we can calculate more complex automatic metrics like BERTScore, COMET\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m     \u001b[0msari_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msari\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msources\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0morig\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprediction\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreferences\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mreferences\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'sari'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m     scores.append({\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sari' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'original': 'In return, Rollo swore fealty to Charles, converted to Christianity, and undertook to defend the northern region of France against the incursions of other Viking groups.',\n",
+       " 'simplified': 'In return, Rollo swore loyalty to Charles and converted to Christianity. || He also said he would defend the northern part of France against other Viking groups.',\n",
+       " 'system': 'systems/T5.txt',\n",
+       " 'sari': 55.226606843090146,\n",
+       " 'simpeval': 1.28,\n",
+       " 'our_score': 3.721647211492401,\n",
+       " 'our_score_content': 2.1161909551258598,\n",
+       " 'our_score_syntax': 0.0,\n",
+       " 'our_score_lexical': 1.605456256366541,\n",
+       " 'our_score_quality': 3.721647211492401,\n",
+       " 'our_score_error': 0.0}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -189,24 +198,85 @@
     "    prediction = t5['simplified']\n",
     "    \n",
     "    simpeval_score = t5['simpeval_scores']\n",
+    "    if simpeval_score is None:\n",
+    "        continue\n",
+    "    simpeval_score = avg(simpeval_score)\n",
+    "\n",
     "    our_score = t5['score']\n",
+    "\n",
+    "    score = {\n",
+    "        'original': orig,\n",
+    "        'simplified': prediction,\n",
+    "        'system': t5['system'],\n",
+    "        'sari': sari_score,\n",
+    "        'simpeval': simpeval_score,\n",
+    "        'our_score': our_score\n",
+    "    }\n",
     "\n",
     "    # The next goal is to calculate a bunch of variations on our score considering only\n",
     "    # certain dimensions of the metric\n",
+    "    for condition in ['content', 'syntax', 'lexical', 'quality', 'error']:\n",
+    "        score[f'our_score_{condition}'] = calculate_sentence_score(t5, get_params(condition))\n",
     "\n",
     "    # Then we can calculate more complex automatic metrics like BERTScore, COMET\n",
     "\n",
     "    sari_score = sari.compute(sources=[orig], predictions=[prediction], references=[references])['sari']\n",
     "\n",
-    "    scores.append({\n",
-    "        'original': orig,\n",
-    "        'simplified': prediction,\n",
-    "        'sari': sari_score,\n",
-    "        'simpeval': simpeval_score,\n",
-    "        'our_score': our_score\n",
-    "    })\n",
+    "    scores.append(score)\n",
     "\n",
     "scores[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sari\n",
+      "-0.0118\n",
+      "0.0448\n",
+      "-0.1488\n",
+      "0.1579\n",
+      "0.0818\n",
+      "simpeval\n",
+      "0.0888\n",
+      "-0.0577\n",
+      "-0.0358\n",
+      "0.176\n",
+      "-0.1913\n"
+     ]
+    }
+   ],
+   "source": [
+    "for system in ['sari', 'simpeval']:\n",
+    "    print(system)\n",
+    "    for condition in ['content', 'syntax', 'lexical', 'quality', 'error']:\n",
+    "        corr = kendalltau([s[f'our_score_{condition}'] for s in scores], [s[system] for s in scores]).correlation\n",
+    "        print(round(corr, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(scores)"
    ]
   },
   {
