--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -332,6 +332,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Query OpenAI with different sets of examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Compare Multiple Prompts"
    ]
   },
