re-organize data and folder structure

--- a/data/gpt-3/analyze.ipynb
+++ b/data/gpt-3/analyze.ipynb
@@ -2,105 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "with open('gpt3-output.json') as f:\n",
-    "    data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c64cfa1f81a14becbfce3076c45c1b67",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='Sentence:', max=27), Output()), _dom_classes=('widget-in…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.series(i)>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Allows interactive plotting\n",
-    "from __future__ import print_function\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets\n",
-    "import matplotlib.pyplot as plt, random\n",
-    "\n",
-    "# This is my first time using iPy, so this is a bit clunky...\n",
-    "def series(i):\n",
-    "    for sent in [x[i] for x in data.values()]:\n",
-    "        print(sent + \"\\n\")\n",
-    "    return()\n",
-    "\n",
-    "interact(\n",
-    "    series, \n",
-    "    i = widgets.IntSlider(\n",
-    "        value=0,\n",
-    "        min=0,\n",
-    "        max=len(data['naive'])-1,\n",
-    "        step=1,\n",
-    "        description='Sentence:',\n",
-    "        orientation='horizontal'\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "# data=[data], \n",
-    "# good_deletion=(-20,20,0.5), \n",
-    "# good_trivial_insertion=(-20,20,0.5), \n",
-    "# good_insertion=(-20,20,0.5), \n",
-    "# good_paraphrase=(-20,20,0.5), \n",
-    "# good_syntax=(-20,20,0.5), \n",
-    "# grammar_error=(-20,20,0.5), \n",
-    "# content_error=(-20,20,0.5),\n",
-    "# size_calculation=['linear', 'log', 'square', 'none'],\n",
-    "# average=[True, False],\n",
-    "# user=['all'] + sorted(list(set([sent['user'] for sent in data]))),\n",
-    "# display_distribution=[True, False]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`text-davinci-002` vs `text-davinci-003`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import csv\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +25,229 @@
     "    if len(lst) == 0:\n",
     "        return 0\n",
     "    return round(sum(lst) / len(lst), prec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-system Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "human_systems = {\n",
+    "    'systems/asset.test.simp': 'asset',\n",
+    "    # 'new_systems/turk_corpus_random.txt': 'turk-corpus',\n",
+    "    'new_systems/simple_wiki.txt': 'simple-wiki',\n",
+    "    'new_systems/our_human_written': 'our-data'\n",
+    "}\n",
+    "\n",
+    "path = 'gpt-outputs/cross-dataset-demonstrations'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {}\n",
+    "for system in human_systems.keys():\n",
+    "    with open(f'{path}/few-shot-batch-2-{human_systems[system]}.json') as f:\n",
+    "        data[system] = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from query import load_batch\n",
+    "orig = [str(x[0]) for x in load_batch('batch-2.csv')]\n",
+    "gold = [str(x[1]) for x in load_batch('ourdata/batch-2-human.csv')]\n",
+    "human_systems['gold/our_human_written'] = 'gold-standard'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interwoven = []\n",
+    "for i in range(min([len(x) for x in data.values()])):\n",
+    "    entry = {}\n",
+    "    for system in data.keys():\n",
+    "        entry[system] = data[system][i]        \n",
+    "    entry['gold/our_human_written'] = gold[i]\n",
+    "    entry['original'] = orig[i]\n",
+    "    interwoven.append(entry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'systems/asset.test.simp': 97.67, 'new_systems/simple_wiki.txt': 96.5, 'new_systems/our_human_written': 97.61, 'gold/our_human_written': 104.89}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = interwoven[0]\n",
+    "\n",
+    "edit_dists = {k: [] for k, v in human_systems.items()}\n",
+    "\n",
+    "for sent in interwoven: \n",
+    "    for system in human_systems.keys():\n",
+    "        edit_dists[system].append(edit_dist(sent['original'], sent[system]))\n",
+    "\n",
+    "average_edit_dist = {k: avg(v) for k, v in edit_dists.items()}\n",
+    "print(average_edit_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "systems/asset.test.simp\n",
+      "A non-profit organization, Iran Human Rights, reported that by 19 November 2022, at least 378 people had died due to government involvement in the protests, including 43 minors under 18. This was the deadliest protest since the 2019-2020 protests which had over 1,500 deaths.\n",
+      "\n",
+      "new_systems/simple_wiki.txt\n",
+      "Iran Human Rights reports that at least 378 people, including 43 minors under 18, were killed when the government used tear gas and guns to intervene in the protests on 19 November 2022. This is the deadliest protest since 2019-2020, when more than 1,500 people were killed.\n",
+      "\n",
+      "new_systems/our_human_written\n",
+      "According to the non-profit organization Iran Human Rights, at least 378 people, including 43 minors, have been killed by the government's intervention in the protests. The government used tear gas and gunfire, making this protest the deadliest since the 2019–2020 protests which resulted in over 1,500 deaths.\n",
+      "\n",
+      "gold/our_human_written\n",
+      "According to Iran Human Rights, at least 378 people including 43 minors have been killed as a result of government intervention in protests, making the protest one of the deadliest in a while.\n",
+      "\n",
+      "original\n",
+      "According to the non-profit organization Iran Human Rights, as of 19 November 2022, at least 378 people including 43 minors under 18 years of age had been killed as a result of the government's intervention in the protests, involving tear gas and gunfire, making the protests the deadliest since the 2019–2020 protests that resulted in more than 1,500 fatalities.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = interwoven[1]\n",
+    "for system in sent.keys():\n",
+    "    print(system)\n",
+    "    print(sent[system], end='\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `text-davinci-002` vs `text-davinci-003`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('gpt-outputs/few-shot-batch-1.json') as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68100ebfd8724d7685da32482d0e7262",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='Sentence:', max=29), Output()), _dom_classes=('widget-in…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.series(i)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Allows interactive plotting\n",
+    "from __future__ import print_function\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "import ipywidgets as widgets\n",
+    "import matplotlib.pyplot as plt, random\n",
+    "\n",
+    "# This is my first time using iPy, so this is a bit clunky...\n",
+    "def series(i):\n",
+    "    for sent in [x[i] for x in data.values()]:\n",
+    "        print(sent + \"\\n\")\n",
+    "    return()\n",
+    "\n",
+    "interact(\n",
+    "    series, \n",
+    "    i = widgets.IntSlider(\n",
+    "        value=0,\n",
+    "        min=0,\n",
+    "        max=len(data)-1,\n",
+    "        step=1,\n",
+    "        description='Sentence:',\n",
+    "        orientation='horizontal'\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# data=[data], \n",
+    "# good_deletion=(-20,20,0.5), \n",
+    "# good_trivial_insertion=(-20,20,0.5), \n",
+    "# good_insertion=(-20,20,0.5), \n",
+    "# good_paraphrase=(-20,20,0.5), \n",
+    "# good_syntax=(-20,20,0.5), \n",
+    "# grammar_error=(-20,20,0.5), \n",
+    "# content_error=(-20,20,0.5),\n",
+    "# size_calculation=['linear', 'log', 'square', 'none'],\n",
+    "# average=[True, False],\n",
+    "# user=['all'] + sorted(list(set([sent['user'] for sent in data]))),\n",
+    "# display_distribution=[True, False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import csv\n",
+    "import os"
    ]
   },
   {
@@ -176,40 +301,6 @@
    "outputs": [],
    "source": [
     "data = load_different_models([1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'batch': 1,\n",
-       "  'original': \"The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\",\n",
-       "  'text-davinci-002': \"The architecture of Winchester College has a diverse set of styles that reflects the multiple periods of building from the college's foundation in 1382. This includes additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\",\n",
-       "  'text-davinci-003': 'Winchester College was built in several architectural styles over its long history, beginning in 1382. Additions and extensions were made in the medieval and Early Modern periods, and then more additions in the Victorian era and again in the 20th century.',\n",
-       "  'models-edit-dist': 201,\n",
-       "  'orig-edit-dist': 192,\n",
-       "  'models-length-change': 101},\n",
-       " {'batch': 1,\n",
-       "  'original': 'Bone has published numerous books including Fantastic Fungi Community Cookbook (2021), which includes recipes by wild mushroom foragers, mycologists, and chefs specializing in mushroom-based dishes. ',\n",
-       "  'text-davinci-002': 'Bone has published many books, including the Fantastic Fungi Community Cookbook (2021). It has recipes by people who collect wild mushrooms, experts on mushrooms, and cooks who make mushroom dishes.',\n",
-       "  'text-davinci-003': 'Bone has written many books, like the Fantastic Fungi Community Cookbook (2021). It has recipes from foragers, scientists, and chefs who specialize in dishes with mushrooms.',\n",
-       "  'models-edit-dist': 84,\n",
-       "  'orig-edit-dist': 82,\n",
-       "  'models-length-change': 25}]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Some example sentences\n",
-    "data[:2]"
    ]
   },
   {
