add turk corpus few shot demo outputs

--- a/data/gpt-3/analyze.ipynb
+++ b/data/gpt-3/analyze.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "\n",
     "human_systems = {\n",
     "    'systems/asset.test.simp': 'asset',\n",
-    "    # 'new_systems/turk_corpus_random.txt': 'turk-corpus',\n",
+    "    'new_systems/turk_corpus_random.txt': 'turk-corpus',\n",
     "    'new_systems/simple_wiki.txt': 'simple-wiki',\n",
     "    'new_systems/our_human_written': 'our-data'\n",
     "}\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f'gpt-outputs/zero-shot-batch-2.json') as f:\n",
+    "    data['systems/zero-shot'] = json.load(f)\n",
+    "human_systems['systems/zero-shot'] = 'zero-shot'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,33 +105,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'systems/asset.test.simp': 97.67, 'new_systems/simple_wiki.txt': 96.5, 'new_systems/our_human_written': 97.61, 'gold/our_human_written': 104.89}\n"
+      "distance from original sentence:\n",
+      "{'systems/asset.test.simp': 97.67, 'new_systems/turk_corpus_random.txt': 86.5, 'new_systems/simple_wiki.txt': 96.5, 'new_systems/our_human_written': 97.61, 'gold/our_human_written': 104.89, 'systems/zero-shot': 107.33}\n",
+      "distance from human written simplification:\n",
+      "{'systems/asset.test.simp': 115.33, 'new_systems/turk_corpus_random.txt': 112.06, 'new_systems/simple_wiki.txt': 117.78, 'new_systems/our_human_written': 114.39, 'gold/our_human_written': 0.0, 'systems/zero-shot': 123.72}\n"
      ]
     }
    ],
    "source": [
-    "sent = interwoven[0]\n",
-    "\n",
     "edit_dists = {k: [] for k, v in human_systems.items()}\n",
-    "\n",
     "for sent in interwoven: \n",
     "    for system in human_systems.keys():\n",
     "        edit_dists[system].append(edit_dist(sent['original'], sent[system]))\n",
-    "\n",
     "average_edit_dist = {k: avg(v) for k, v in edit_dists.items()}\n",
+    "print(\"distance from original sentence:\")\n",
+    "print(average_edit_dist)\n",
+    "\n",
+    "edit_dists = {k: [] for k, v in human_systems.items()}\n",
+    "for sent in interwoven: \n",
+    "    for system in human_systems.keys():\n",
+    "        edit_dists[system].append(edit_dist(sent['gold/our_human_written'], sent[system]))\n",
+    "average_edit_dist = {k: avg(v) for k, v in edit_dists.items()}\n",
+    "print(\"distance from human written simplification:\")\n",
     "print(average_edit_dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -128,25 +147,31 @@
      "output_type": "stream",
      "text": [
       "systems/asset.test.simp\n",
-      "A non-profit organization, Iran Human Rights, reported that by 19 November 2022, at least 378 people had died due to government involvement in the protests, including 43 minors under 18. This was the deadliest protest since the 2019-2020 protests which had over 1,500 deaths.\n",
+      "The club announced on social media that customers managed to restrain the attacker. They also said that they were 'shocked and saddened' by the attack and sent their condolences to the victims and their families.\n",
+      "\n",
+      "new_systems/turk_corpus_random.txt\n",
+      "The club said on social media that customers stopped the gunman. It expressed that it was \"devastated by the senseless attack on our community\" and offered condolences to the victims and their families.\n",
       "\n",
       "new_systems/simple_wiki.txt\n",
-      "Iran Human Rights reports that at least 378 people, including 43 minors under 18, were killed when the government used tear gas and guns to intervene in the protests on 19 November 2022. This is the deadliest protest since 2019-2020, when more than 1,500 people were killed.\n",
+      "The club announced on social media that customers stopped the shooter. They expressed that they were \"heartbroken by the senseless attack on our community\" and sent their condolences to the victims and their loved ones.\n",
       "\n",
       "new_systems/our_human_written\n",
-      "According to the non-profit organization Iran Human Rights, at least 378 people, including 43 minors, have been killed by the government's intervention in the protests. The government used tear gas and gunfire, making this protest the deadliest since the 2019–2020 protests which resulted in over 1,500 deaths.\n",
+      "The club reported on social media that customers prevented the gunman. They said they were “devastated” by the attack and offered their condolences to the victims and their families.\n",
+      "\n",
+      "systems/zero-shot\n",
+      "The club announced on social media that customers had managed to overpower the gunman. They declared that they were \"deeply saddened by the senseless attack on our community\", and offered condolences to those affected and their families.\n",
       "\n",
       "gold/our_human_written\n",
-      "According to Iran Human Rights, at least 378 people including 43 minors have been killed as a result of government intervention in protests, making the protest one of the deadliest in a while.\n",
+      "On social media, the club said that customers stopped the gunman. They also said that they were “devastated by the senseless attack on our community” and that they felt sorry for the victims and their families.\n",
       "\n",
       "original\n",
-      "According to the non-profit organization Iran Human Rights, as of 19 November 2022, at least 378 people including 43 minors under 18 years of age had been killed as a result of the government's intervention in the protests, involving tear gas and gunfire, making the protests the deadliest since the 2019–2020 protests that resulted in more than 1,500 fatalities.\n",
+      "The club said on social media that customers subdued the gunman, that it was \"devastated by the senseless attack on our community\", and that it offered condolences to the victims and their families.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "sent = interwoven[1]\n",
+    "sent = interwoven[0]\n",
     "for system in sent.keys():\n",
     "    print(system)\n",
     "    print(sent[system], end='\\n\\n')"
