add init to analysis utils

--- a/data/analysis/analysis.ipynb
+++ b/data/analysis/analysis.ipynb
@@ -36,12 +36,7 @@
     }
    ],
    "source": [
-    "from types import *\n",
-    "from dataloader import *\n",
-    "from util import *\n",
-    "from graphs import *\n",
-    "from agreement import *\n",
-    "from scoring import *\n",
+    "from utils.all import *\n",
     "\n",
     "# There's also 'tutorial' and 'preliminary' data\n",
     "data = load_data('../annotated', batch_num=[5, 6], preprocess=True)\n",
