--- a/data/analysis/datasets.ipynb
+++ b/data/analysis/datasets.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataloader import *\n",
-    "from graphs import *"
+    "from utils.all import *"
    ]
   },
   {
