--- a/data/analysis/scoring.ipynb
+++ b/data/analysis/scoring.ipynb
@@ -55,10 +55,7 @@
    ],
    "source": [
     "import json\n",
-    "from types import *\n",
-    "from dataloader import *\n",
-    "from graphs import *\n",
-    "from scoring import *\n",
+    "from utils.all import *\n",
     "\n",
     "# Allows interactive plotting\n",
     "from __future__ import print_function\n",
