--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -17,8 +17,7 @@
     }
    ],
    "source": [
-    "from scoring import *\n",
-    "from dataloader import *\n",
+    "from utils.all import *\n",
     "from scipy.stats import kendalltau\n",
     "from evaluate import load\n",
     "\n",
