--- a/data/analysis/scoring.ipynb
+++ b/data/analysis/scoring.ipynb
@@ -2,54 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading files: ['../annotated/batch_1_anton.json', '../annotated/batch_1_ayush.json', '../annotated/batch_1_kelly.json', '../annotated/batch_2_vinayak.json', '../annotated/batch_2_vishnesh.json', '../annotated/batch_3_anton.json', '../annotated/batch_3_ayush.json', '../annotated/batch_3_kelly.json']\n",
+      "Loading files: ['../annotated/batch_5_anton.json', '../annotated/batch_5_ayush.json', '../annotated/batch_5_kelly.json', '../annotated/batch_5_rachel.json', '../annotated/batch_5_vinayak.json', '../annotated/batch_5_vishnesh.json', '../annotated/batch_6_anton.json', '../annotated/batch_6_ayush.json', '../annotated/batch_6_kelly.json', '../annotated/batch_6_rachel.json', '../annotated/batch_6_vinayak.json', '../annotated/batch_6_vishnesh.json']\n",
       "\n",
-      "Found users: {'ayush', 'vinayak', 'kelly', 'vishnesh', 'anton'}\n",
+      "Found users: {'vinayak', 'anton', 'rachel', 'vishnesh', 'kelly', 'ayush'}\n",
       "\n",
-      "Couldn't process grammar for substitution: ['positive', '', '', '']. Assuming 'no'...\n",
-      "Couldn't process positive rating for substitution: ['positive', '', '', '']. Assuming 'somewhat'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'a lot', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'yes', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'yes', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['perfect', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process coreference error for deletion: ['perfect', '', 'no']. Assuming 'no'...\n",
-      "Couldn't process grammar for deletion: ['good', 'no', '']. Assuming 'no'...\n",
-      "Couldn't process grammar for substitution: ['positive', 'a lot', '', '']. Assuming 'no'...\n"
+      "anton - Batch 5, HIT 38 (ID 37) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "rachel - Batch 5, HIT 21 (ID 20) has 4 deletion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "rachel - Batch 5, HIT 21 (ID 20) has 4 insertion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "rachel - Batch 5, HIT 23 (ID 22) has 1 reorder edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 5, HIT 17 (ID 16) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 5, HIT 25 (ID 24) has 5 deletion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 5, HIT 25 (ID 24) has 2 insertion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "ayush - Batch 6, HIT 3 (ID 42) has 1 structure edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "vinayak - Batch 6, HIT 16 (ID 55) has 1 insertion edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "When processing sentence: vinayak - Batch 5, HIT 10 (ID 9). Caught error on: Could not process edit: {'type': 'deletion', 'id': 1, 'original_span': [(229, 233)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 5, HIT 34 (ID 33). Caught error on: ''. Skipping...\n",
+      "When processing sentence: rachel - Batch 6, HIT 34 (ID 73). Caught error on: ''. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 2 (ID 41). Caught error on: Could not process edit: {'type': 'substitution', 'id': 4, 'original_span': [(164, 171)], 'simplified_span': [(166, 175)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 2 (ID 41). Caught error on: Could not process edit: {'type': 'substitution', 'id': 5, 'original_span': [(224, 226)], 'simplified_span': [(281, 284)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 18 (ID 57). Caught error on: Could not process edit: {'type': 'deletion', 'id': 1, 'original_span': [(278, 282)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 18 (ID 57). Caught error on: Could not process edit: {'type': 'insertion', 'id': 4, 'original_span': None, 'simplified_span': [(383, 387)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 27 (ID 66). Caught error on: Could not process edit: {'type': 'insertion', 'id': 1, 'original_span': None, 'simplified_span': [(49, 54)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 31 (ID 70). Caught error on: Could not process edit: {'type': 'insertion', 'id': 0, 'original_span': None, 'simplified_span': [(75, 78)], 'annotation': None}. Skipping...\n",
+      "When processing sentence: vinayak - Batch 6, HIT 40 (ID 79). Caught error on: Could not process edit: {'type': 'insertion', 'id': 1, 'original_span': None, 'simplified_span': [(109, 112)], 'annotation': None}. Skipping...\n"
      ]
     }
    ],
@@ -229,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
